# calculator

./: .dockerignore  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT_FIXED.md  Dockerfile  FINAL_SEVERITY_CONFIGURATION.md  GITHUB_SETUP.md  NETLIFY_DEPLOYMENT.md  NGROK_SETUP.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  RENDER_DEPLOYMENT_CHECKLIST.md  START_HERE.md  START_SERVER_HERE.bat  STATUS_REPORT.md  TESTING_GUIDE.md  TROUBLESHOOT.bat  VALIDATE_SETUP.bat  VSCODE_SETUP_GUIDE.md  docker-compose.yml  netlify.toml  pyproject.toml  render.yaml  requirements-netlify.txt  requirements.txt  run_server.py  setup_github.bat  test_api.py  test_api_curl.bat  test_api_endpoints.py  verify_deployment_ready.py
api/: app.py
it project/: Dockerfile  README.md  test_api.py
it project/ticket/: Dockerfile  GITHUB_SETUP.md  RENDER_DEPLOYMENT_CHECKLIST.md  requirements.txt  run_server.py  setup_github.bat  verify_deployment_ready.py
it project/ticket/models/: severity_scaler.pkl
it project/ticket/src/features/: embeddings.py  (+1 more)
logs/: .gitignore
models/: severity_model.pkl
src/config/: config.yaml
src/features/: embeddings.py  tfidf_features.py
src/models/: evaluate.py  predict.py  train_model.py
src/preprocessing/: language_detector.py  text_cleaner.py  translator.py
src/scoring/: severity_scaler.py
src/utils/: logger.py
static/: index.html
tests/: test_prediction.py
ticket/: Dockerfile  README.md  docker-compose.yml  render.yaml  requirements.txt
ticket/it project/ticket/: README.md  render.yaml
ticket/models/: embeddings_info.pkl
ticket/src/models/: predict.py
(+11 files in other folders)
